# insurance-reconcile

./: README.md  pyproject.toml
notebooks/: 01_insurance_reconcile_demo.py  benchmark_reconcile.py
src/insurance_reconcile/: __init__.py  _compat.py  simulate.py
src/insurance_reconcile/data/: __init__.py  losscost.py
src/insurance_reconcile/diagnostics/: __init__.py  attribution.py  coherence.py
src/insurance_reconcile/hierarchy/: __init__.py  builder.py  spec.py
src/insurance_reconcile/reconcile/: __init__.py  freqsev.py  loss_ratio.py  premium_wls.py  wrapper.py
tests/: test_attribution.py  test_coherence.py  test_compat.py  test_freqsev.py  test_hierarchy_builder.py  test_hierarchy_spec.py  test_insurance_reconciler.py  test_integration.py  test_loss_ratio_reconciler.py  test_losscost_frame.py  test_premium_wls.py  test_simulate.py
