[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-reconcile"
version = "0.1.0"
description = "Hierarchical forecast reconciliation with insurance semantics"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
keywords = [
    "insurance",
    "actuarial",
    "reconciliation",
    "hierarchical forecasting",
    "loss cost",
    "minTrace",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
mintrace = [
    "hierarchicalforecast>=1.5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_reconcile"]

[tool.pytest.ini_options]
testpaths = ["tests"]
